tests/Tuc/Fixtures/errors/UndefinedComponentParticipant.tuc
tuc parse error test
participants
    StreamComponent
        GenericService parts
